-----3.0.0 (XX) -----
New features:
	* [worksheet]
		* Inset plot areas - plot areas added as child of another plot area
		* Improve axis ticks locations. The don't need to be always from the bottom to top if it does not look nice (!700)

Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)


-----2.12.0 (2025-04-25) -----
New features:
	* [general]
		* Detail info view mode in the Color Maps Browser
		* Extend About dialog: Add links and buttons to copy environment and citation, show external depenencies
		* Make the changes in Note undo/redo-able
		* For the number format, allow to specify in the application settings both - the decimal and the group - separators
		* Automatically update the visualizations on number format changes without restart
	* [import]
		* Download datasets from kaggle.com
		* Only allow selecting matching import filter
		* Support MCAP file import
		* Show error messages for the serial port in when creating a live data source to notify directly about missing device permissions, etc.
		* Add warning when importing projects in file import dialog
		* Improve error messages for data import
		* Fix preview of data with header
		* Ask how to treat multilayer graphs when opening OPJ project
		* Improve error message handling
		* Improve livedata import
		* Add possibility to specify custom column datatypes (mandatory for livedata)
		* Notify about the unsupported UTF16 encoding (BUG 496215)
		* Read live data with multiple columns also for UDP and local sockets and for Serial Port
		* Faster import of big ASCII files on Windows
		* Read calculated value instead of formula text from excel sheets
	* [analysis]
		* Add possibility to do calculations on curves (define a new curve as a function of another curve)